<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titol"
        android:layout_width="426dp"
        android:layout_height="125dp"
        android:background="@color/black"
        android:padding="@dimen/padding_regular"
        android:text="@string/titol"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />



    <ImageView
        android:id="@+id/AnimalCrossing_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/animal_crossing_peluche__1_"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="195dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/AnimalCrossing_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_crossing_txt"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageView
        android:id="@+id/OnePiece_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/peluche_one_piece_luffy_20_cm"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="195dp" />

    <TextView
        android:id="@+id/Onepiece_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_piece_txt"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageView
        android:id="@+id/luigi_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/peluche_luigi__1_"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="410dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/luigi_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luigi_txt"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="535dp" />

    <ImageView
        android:id="@+id/saitama_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/peluche_saitama"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="410dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/saitama_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saitama_txt"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="535dp" />
</androidx.constraintlayout.widget.ConstraintLayout>